--- a/PA1_template.html
+++ b/PA1_template.html
@@ -456,8 +456,8 @@ data_filled$day_type &lt;- as.factor(data_filled$day_type)
 interval_daytype_avg &lt;- data_filled %&gt;%
   group_by(interval, day_type) %&gt;%
   summarise(avg_steps = mean(steps))</code></pre>
-<pre><code>## `summarise()` has grouped output by &#39;interval&#39;. You can override using the
-## `.groups` argument.</code></pre>
+<pre><code>## `summarise()` has grouped output by &#39;interval&#39;. You can override using
+## the `.groups` argument.</code></pre>
 <pre class="r"><code># Load library ggplot2
 library(ggplot2)</code></pre>
 <pre><code>## Warning: package &#39;ggplot2&#39; was built under R version 4.4.3</code></pre>
